# equation_solver

./: .gitignore  1.eqsolver.js  Cargo.toml  README.md  bootstrap.js  eqsolver.js  eqsolver.wasm  package.json  webpack.config.js
.github/workflows/: check.yml  deploy.yml  rust.yml
public/: index.html
src/: lib.rs
static/: index.html
